assets/css/style.css
/* ... */
.reasons p {
    font-size: 1.2rem;
    font-family: 'Open sans', sans-serif;

    line-height: 150%;
    padding-top: 10px;
    align-items: flex-start;
}

.face_outher {
    height: 20vw;
    max-height: 225px;
    width: 20vw;
    max-width: 225px;

    margin: 20px;

    border: solid;
    border-radius: 50%;
    border-color: #3a3a3a;

    float: left;
    align-items: center;
}

#reasons-kid {
    background-color: rgba(220, 205, 116, .7);
}

#kid-face {
    background: url(../images/facekid.jpg) center center;
    background-size: cover;

    height: 100%;

    border-radius: 50%;
}

#kid-list,
#parent-list,
#community-list {
    align-self: flex-start;
    padding-left: 20px;
}

#reasons-parent {
    background-color: rgba(30, 163, 225, .7);
}

#parent-face {
    background: url(../images/faceparent.jpg) center center;
    background-size: cover;

    height: 100%;
    border-radius: 50%;
}

#parent-face_outher {
    float: left;
}

#reasons-community {
    background-color: rgba(212, 87, 103, .7);
}

#community-face_outher {
    float: left;
}

#community-face {
    background: url(../images/community.jpg) center center;
    background-size: cover;

    height: 100%;
    border-radius: 50%;
}

/*map section*/

#map {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    align-content: space-around;
    justify-content: center;
}

#map_img {
    width: 400px;
    padding-top: 25px;
}

#map-text {
    width: 30%;
    padding: 25px;
    margin: 50px;

    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    justify-content: space-around;
}

#map_iframe {
    width: 100%;
   padding: 22px;
}

.public {
    font-size: 1.2em;
    text-align: center;
}

/*opinions*/
#opinions-section {
    width: 100%;
    margin: 25px 0;
    background-color: #c6c1c1;
}

#opinions-inside {
    width: 80%;

    margin: 20px auto;

    display: flex;
    align-items: center;
    justify-content: space-around;
    align-content: space-around;
    flex-wrap: wrap;
}

.speech-bubble {
    background-color: white;
    color: #3a3a3a;

    padding: 20px;
    margin: 10px;
    border-radius: 10px;
    max-width: 250px;

    align-items: center;
}

.speech-bubble .name {
    text-align: right;
    font-family: 'amatic sc', sans-serif;
    font-weight: bold;
}

#addcomment {
    padding: 10px;
    font-weight: 600;
    font-size: 1.5rem;
}

#here {
    text-decoration: none;
    color: #000;
    font-weight: bold;
    font-size: 1.3em;
}

#here:hover {
    font-size: 1.6em;
    color: #fff;
}

/* footer*/
.footer li {
    display: inline;
    padding: 25px;
}

.footer i {
    font-size: 2.5em;
    color: #3a3a3a;
}

#socialmedia {
    font-family: 'amatic sc', sans-serif;
    font-size: 3em;
    font-weight: bold;
    color: #3a3a3a;
}

footer {
    width: 100%;

    background: #fff;
    border-top: 1px solid grey;

    text-align: center;
}

/*gallery page*/

#photos {
    clear: both;

    line-height: 0;

    column-count: 3;
    column-gap: 10px;
}

#photos img {
    width: 100%;

    padding: 10px;
}

/*sign-up page*/

.form-bg {
    background: url(../images/gras.jpg) fixed;
    background-size: cover;

    width: 100%;
}

.form-bg h2 {
    color: #fff;

    padding: 25px;
}

.form-field {
    width: 80%;

    margin: 0 auto 50px auto;
    padding-top: 50px;
    padding-bottom: 50px;

    color: #fff;
    background: rgba(58, 58, 58, 0.8);

    font-size: 1.5rem;
    font-family: 'Open Sans', sans-serif;
    line-height: 35px;

    display: flex;
    flex-wrap: wrap;
    align-items: center;
    flex-direction: column;
    align-content: center;
}

.freq, .checkbox {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    padding-left: 160px;
    width: 50%;
}

.checkbox label, .freq label {
    padding-left: 50px;
}

.form-div {
    display: flex;
    justify-content: space-between;

}
input {
    padding: 5px;
}

#opinion {
    display: flex;

    width: 400px;
    height: 150px;

    padding: 20px;
}

.checkbox {
    display: block;
}

.submit {
    background: white;
    color: #3a3a3a;

    border-radius: 1px;
    padding: 15px;
    border: #000;
    margin: 15px auto;

    font-size: 1.5em;
    font-family: 'amatic sc', sans-serif;
    font-weight: bold;

    display: block;
    position: relative;
}

.submit:hover {
    background: #3a3a3a;
    color: #fff;
}

#opinion-form {
    display: block;
}
/*Calendar page*/

#calendar-section {
    clear: both;
    width: 100%;
    min-height: calc(100vh - 155px);
    display: flex;
    justify-items: center;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-content: space-around;
}

video {
    height: 650px;
}

#calendar-events {
    width: 500px;
    height: 600px;

    border: 1px solid #3a3a3a;
    padding: 25px;

    line-height: 2.5rem;
    font-size: 1.25rem;

    display: flex;
    justify-content: space-around;
    align-content: space-around;
    flex-direction: column;
    flex-wrap: nowrap;
    align-items: flex-start;
}

#calendar-events li {
    list-style: none;
}

#events-text {
    padding: 20px;
}

#events-text h3 {
    text-align: left;
    padding: 5px;
}

table {
    height: 650px;
    width: 500px;
}

table,
td,
th {
    border-collapse: collapse;
    border: 1px solid #3a3a3a;
    padding: 3px;

    text-align: center;
}

th {
    width: 20px;

    font-family: 'amatic sc', sans-serif;
    font-size: 2rem;
    font-weight: bold;
}
/* ... */

